--- a/post.hbs
+++ b/post.hbs
@@ -6,7 +6,7 @@
 {{! Everything inside the #post tags pulls data from the post }}
 {{#post}}
 
-<div class="sidebar {{#if image}}" style="background-image: url({{image}}){{else}}{{/if}}">
+<div class="sidebar">
     <header class="main-header post-head">
 
 
@@ -14,7 +14,22 @@
             {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Blog Logo" /></a>{{/if}}
         </div>
 
-        <nav class="post-nav">
+        <div class="blog-logo-wrapper-top">
+            {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{asset "images/humble-anarchist-post-top.png"}}" alt="Blog Logo" /></a>{{/if}}
+        </div>
+
+        <button id="hamburger" class="menu-button">
+                <span id="morph-shape" class="morph-shape" data-morph-open="M3,20c0,0,12-4,27-4s27,4,27,4;M3,60c0,0,12,4,27,4s27-4,27-4" data-morph-close="M3,20c0,0,12,4,27,4s27-4,27-4;M3,60c0,0,12-4,27-4s27,4,27,4">
+                    <svg width="100%" height="100%" viewBox="0 0 60 80" preserveAspectRatio="none">
+                        <path d="M3,20C3,20,15,20,30,20C45,20,57,20,57,20"></path>
+                        <line x1="3" y1="40" x2="57" y2="40"></line>
+                        <path d="M3,60C3,60,15,60,30,60C45,60,57,60,57,60"></path>
+                    <desc>Created with Snap</desc><defs></defs></svg>
+                </span>
+            </button>
+
+        <nav class="post-nav" id="post-nav">
+
 
             <a class="button" href="{{@blog.url}}">about</a>
             <a class="button" href="{{@blog.url}}">contact</a>
@@ -32,15 +47,18 @@
 
 </div>
 
+
+
 <main class="content" role="main">
 
     <article class="{{post_class}}">
 
-        <header class="post-header">
-            <h1 class="post-title">
-                <span>{{title}}</span>
-              </h1>
-        </header>
+                    <header class="post-header">
+                        <h1 class="post-title">
+                            <span>{{title}}</span>
+                          </h1>
+                    </header>
+
 
         <section class="post-content">
             {{content}}
@@ -53,7 +71,7 @@
         </section>
 
     </article>
-
+</main>
 
 
  <footer class="site-footer post-site-footer">
@@ -65,7 +83,6 @@ If you have any questions about this blog or me, Emil Cardell, start by visiting
             </div>
 
     </footer>
-</main>
 
 
 {{/post}}
