--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -876,6 +876,7 @@ div.main-header-content {
 
 .post-list .post-meta {
   text-align: center;
+  margin:  1rem 0 0 0;
 }
 
 .post-list .post-meta .post-date {
@@ -907,11 +908,6 @@ div.main-header-content {
 
 .post-template .post-title span {
   font-size: 3.5rem;
-  background-color: #f3f3f3;
-  padding-right: 1rem;
-  border-left: 1rem solid #f3f3f3;
-  margin-left: -1rem;
-
 }
 
 
@@ -936,7 +932,7 @@ body:not(.post-template) .post-title {
 
 .post-meta {
     display: block;
-    margin: 0.5rem 0 0 0;
+    margin: 7rem 0 6rem 0;
     font-family: "Open Sans", sans-serif;
     font-size: 1.5rem;
     line-height: 2.2rem;
@@ -1039,16 +1035,12 @@ body:not(.post-template) .post-title {
     margin-bottom: 0;
 }
 
-.post-template .post-meta {
-    margin: 0;
-}
-
 /* Stop .full-img from creating horizontal scroll - slight hack due to
    imperfections with browser width % calculations and rounding */
 .post-template .content {
     overflow: hidden;
     margin-left: 250px;
-    margin-top: 8rem;
+    margin-top: 4rem;
 }
 
 /* Tweak the .post wrapper style */
@@ -1480,42 +1472,52 @@ body:not(.post-template) .post-title {
     max-height: 30%;
 }
 
-/* On page2+ show extra pagination controls at the top of post list */
-.archive-template .extra-pagination {
-    display: block;
-}
+
 
 
 /* ==========================================================================
    9. Footer - The bottom of every page
    ========================================================================== */
 
+.post-comments {
+  max-width: 500px;
+  width: 80%;
+  margin-left: 10rem;
+}
+
 .post-site-footer .footer-about {
     width: 100%;
+}
+.copyright {
+  text-align: center;
+  font-size: 1.1rem;
+  color: #D3D7D7;
+  padding-bottom: 7rem;
+}
+
+.site-footer-index .copyright a, .site-footer .copyright a {
+  color: #D3D7D7;
+  border-bottom: none;
 }
 
 .site-footer {
     position: relative;
     width: 80%;
-    max-width: 440px;
+    max-width: 500px;
     margin-left: 10rem;
-    background-color: #f7f7f7;
-    padding: 30px;
-    margin-top: 3rem;
+    margin-top: 7rem;
+    margin-bottom: 7rem;
 }
 
 .site-footer-index {
   position: relative;
   width: 80%;
-  max-width: 620px;
-  background-color: #f7f7f7;
-  padding: 30px;
-  margin: 0 auto 5rem auto;
+  max-width: 500px;
+  margin: 4rem auto 5rem auto;
 }
 
 
 .site-footer a {
-    color: #7a8B89;
     text-decoration: none;
     border-bottom: 1px dotted #7a8B89;
 }
@@ -1563,9 +1565,13 @@ body:not(.post-template) .post-title {
 .blog-logo-wrapper {
     display: block;
     width: 80%;
-    margin: 5rem auto 0 auto;
+    margin: 7rem auto 0 auto;
     padding-bottom: 5rem;
     text-align: center;
+}
+
+.blog-logo-wrapper--top {
+  display: none;
 }
 
 
@@ -1575,18 +1581,69 @@ body:not(.post-template) .post-title {
 
 @media only screen and (max-width: 1020px) {
 
+    .blog-logo-wrapper--top {
+      display: block;
+      padding-top: 2rem;
+      float: none;
+      margin: 8rem auto 0 auto;
+      width: 298px;
+    }
+
+    .blog-logo-wrapper {
+      display: none;
+    }
+
+    .post-nav {
+      text-align: left;
+      max-width: 500px;
+      width: 80%;
+      margin: 0 auto;
+      text-align: center;
+      font-size: 1.4rem;
+    }
+    .post-nav a {
+      padding: 0;
+      display: inline-block;
+      padding: 1rem;
+    }
+    .post-head.main-header {
+      margin: 0 auto;
+      overflow: hidden;
+      height: 100%;
+      max-width: 500px;
+      width: 80%;
+    }
+
+    .post {
+      margin: 0 auto;
+    }
+
+    .post-comments {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     .sidebar {
-        background-color: #231F20;
         width: 100%;
-        height: 200px;
+        height: 280px;
         float: none;
         position: relative;
+        background-color: #f7f7f7;
+        border-bottom: 1px solid #f3f3f3;
+        overflow: hidden;
+    }
+
+    .blog-logo-wrapper--top .blog-logo img {
+      height: 120px;
     }
 
     .blog-logo-wrapper {
         padding-top: 2rem;
         margin-top: 8rem;
         padding-bottom: 2rem;
+        float: left;
+        width: 87px;
+        margin-left: 28%;
     }
 
     .post-template .content {
@@ -1688,9 +1745,7 @@ body:not(.post-template) .post-title {
         font-size: 1.6rem;
     }
 
-    .post-head.main-header {
-        height:45%;
-    }
+
 
     .tag-head.main-header,
     .author-head.main-header {
@@ -1714,6 +1769,9 @@ body:not(.post-template) .post-title {
    ========================================================================== */
 
 @media only screen and (max-width: 500px) {
+    .post-nav {
+      font-size: 1.2rem;
+    }
 
     .logo {
         width: 300px;
@@ -1723,6 +1781,7 @@ body:not(.post-template) .post-title {
 
     .logo img {
         width: 300px;
+        margin-top: 4rem;
     }
 
     .rebranding {
@@ -1737,7 +1796,7 @@ body:not(.post-template) .post-title {
     .home-template .main-header:after { display: none; }
 
     .index-main-nav {
-        top: 155px;
+        top: 180px;
         height: 3rem;
     }
 
@@ -1761,7 +1820,7 @@ body:not(.post-template) .post-title {
 
 
     .main-header {
-        margin-bottom: 15px;
+        margin-bottom: 6rem;
         height: 40%;
     }
 
@@ -1851,7 +1910,6 @@ body:not(.post-template) .post-title {
     }
 
     p, ul, ol, dl {
-        font-size: 0.95em;
         margin: 0 0 2.5rem 0;
     }
 
@@ -1914,7 +1972,7 @@ body:not(.post-template) .post-title {
     .post-content .full-img {
         width: auto;
         width: calc(100% + 32px); /* expand with to image + margins */
-        margin: 0 -16px; /* get rid of margins */
+        margin: 2rem -16px; /* get rid of margins */
         min-width: 0;
         max-width: 112%; /* fallback when calc doesn't work */
     }
@@ -1987,10 +2045,6 @@ body:not(.post-template) .post-title {
 
     .author-profile {
         padding-bottom: 2rem;
-    }
-
-    .post-head.main-header {
-        height: 30%;
     }
 
     .tag-head.main-header,
