--- a/default.hbs
+++ b/default.hbs
@@ -22,11 +22,23 @@
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-65866086-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
 </head>
 <body class="{{body_class}}">
 
     {{! Everything else gets inserted here }}
-    {{{body}}} 
+    {{{body}}}
 
 
 
