--- a/page.hbs
+++ b/page.hbs
@@ -1,26 +1,79 @@
 {{!< default}}
 
-{{! This is a page template. A page outputs content just like any other post, and has all the same
-    attributes by default, but you can also customise it to behave differently if you prefer. }}
+{{! The comment above "< default" means - insert everything in this file into
+    the {body} of the default.hbs template, which contains our header/footer. }}
 
-<nav class="main-nav clearfix">
-    <a class="back-button icon-arrow-left" href="{{@blog.url}}">Home</a>
-    <a class="subscribe-button icon-feed" href="{{@blog.url}}/rss/">Subscribe</a>
-</nav>
+{{! Everything inside the #post tags pulls data from the post }}
+{{#post}}
+
+<div class="sidebar {{#if image}}" style="background-image: url({{image}}){{else}}{{/if}}">
+    <header class="main-header post-head">
+
+
+        <div class="blog-logo-wrapper">
+            {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="Humble Anarchist" /></a>{{/if}}
+        </div>
+
+        <div class="blog-logo-wrapper--top">
+            <a class="blog-logo" href="{{@blog.url}}"><img src="{{asset "images/humble-anarchist-head-text-left.png"}}" alt="Humble Anarchist" /></a>
+        </div>
+
+        <nav class="post-nav">
+
+            <a class="button" href="{{@blog.url}}/about">about</a>
+            <a class="button" href="{{@blog.url}}/contact">contact</a>
+            <a class="button" href="https://twitter.com/emilcardell">twitter</a>
+            <a class="button" href="https://www.linkedin.com/in/emilcardell">linked in</a>
+
+        </nav>
+    </header>
+
+
+        <div class="post-footer-content">
+
+        </div>
+
+
+</div>
 
 <main class="content" role="main">
 
     <article class="{{post_class}}">
-    {{! Everything inside the #post tags pulls data from the post }}
-    {{#post}}
 
-        <h1 class="post-title">{{title}}</h1>
+        <header class="post-header">
+            <h1 class="post-title">
+                <span>{{title}}</span>
+              </h1>
+        </header>
 
         <section class="post-content">
             {{content}}
         </section>
 
-    {{/post}}
+         <section class="post-meta">
+            <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}"># {{date format="DD MMMM YYYY"}}</time>
+            {{tags separator=" "}}
+
+        </section>
+
     </article>
 
+
+ <footer class="site-footer post-site-footer">
+
+
+        <div class="footer-content">
+            Opinions expressed, by me, on this site are my personal opinions and not necessarily shared by my employer.
+            </p>
+
+            <p>
+            All blog posts on this blog is licensed under <a href="http://creativecommons.org/licenses/by-sa/4.0/">Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)</a>
+            </p>
+            </div>
+              <section class="copyright">&copy; Emil Cardell {{date format="YYYY"}}</section>
+
+    </footer>
 </main>
+
+
+{{/post}}
